monitoring/controllers/staging/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.cluster-k3s
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    secretName: grafana-tls-secret
    - hosts:
      - grafana.cluster-k3s
